testdata/language-features/basic-values/if04.reject.out
type error: can not unify
[32m'Tuple0[m
with
[32m'Char[m

in testdata/language-features/basic-values/if04.reject.lc:1:31:
value1 = if True then () else '_'
                              ^^^
